--- a/Lab5/IntegrationTests/IntegrationTests.csproj
+++ b/Lab5/IntegrationTests/IntegrationTests.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7A838AB1-6F26-45F1-AAC2-C804F10CBF0D}</ProjectGuid>
+    <ProjectGuid>{D6767A98-AD68-4A98-88D3-F04C6B113C97}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTesting</RootNamespace>
-    <AssemblyName>UnitTesting</AssemblyName>
+    <RootNamespace>IntegrationTests</RootNamespace>
+    <AssemblyName>IntegrationTests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -45,19 +45,26 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.2.2.10\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MatrixTest.cs" />
+    <Compile Include="MainWindowViewModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ExerciseWPF\ExerciseWPF.csproj">
+      <Project>{b65407bd-97e6-4449-9f1c-c378d0a65205}</Project>
+      <Name>ExerciseWPF</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MatrixCalculationsBL\MatrixCalculationsBL.csproj">
-      <Project>{cc1b74a1-ba9d-417b-a74a-a2ca870a9b81}</Project>
+      <Project>{CC1B74A1-BA9D-417B-A74A-A2CA870A9B81}</Project>
       <Name>MatrixCalculationsBL</Name>
     </ProjectReference>
   </ItemGroup>
